2005-03-29 Bogdan Gheorghe
	
	Added cumulative timer to SouceIndexer/DOMIndexer.
	Purge any existing jobs from job queue on indexer change event.
	Put in an indexer change nofication event that the IndexManager sends to the
	newly selected indexer to allow it to react to being selected.
	
2005-03-28 Bogdan Gheorghe

	NPE Fix for CTagsConsoleParser
	
2005-03-28 Bogdan Gheorghe

	Initial CTags Indexer contribution
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsEntry.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsAddCompilationUnitToIndex.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsAddFileToIndex.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsConsoleParser.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsFileReader.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsHeader.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexAll.jav
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexer.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexeRequest.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsRemoveFromIndex.java				
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsSaveIndex.java	
	
	Added timing option to all three indexers
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMSourceIndexerRunner.java
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexerRunner.java
	
	Modified event notification for all indexers to make use of ICDTIndexer constants as opposed to ICElements, in
	order to allow indexers to request additional jobs without having to create or retrieve an ICElement
	
	* index/org/eclipse/cdt/internal/core/index/sourceindexer/SourceIndexer.java
	* index/org/eclipse/cdt/core/index/ICDTIndexer.java
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java
		
2005-03-18 Alain Magloire